--- a/index.html
+++ b/index.html
@@ -103,22 +103,22 @@
                         <div class="row">
                           <div class="col-md-10 offset-md-1">
                             <div class="row">
-                              <div class="col-md-4">
+                              <div class="col-4">
                                 <img src="assets/img/logo-cpp.png" class="img-thumbnail">
                               </div>
-                              <div class="col-md-4">
+                              <div class="col-4">
                                 <img src="assets/img/logo-c.png" class="img-thumbnail">
                               </div>
-                              <div class="col-md-4">
+                              <div class="col-4">
                                 <img src="assets/img/logo-python.png" class="img-thumbnail">
                               </div>
-                              <div class="col-md-4">
+                              <div class="col-4">
                                 <img src="assets/img/logo-r.png" class="img-thumbnail">
                               </div>
-                              <div class="col-md-4">
+                              <div class="col-4">
                                 <img src="assets/img/logo-sql.png" class="img-thumbnail">
                               </div>
-                              <div class="col-md-4">
+                              <div class="col-4">
                                 <img src="assets/img/logo-php.png" class="img-thumbnail">
                               </div>
                             </div>
@@ -171,7 +171,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-alfinia.html">
                 <div class="work-img">
                   <img src="assets/img/project-alfinia.png" alt="" class="img-fluid">
                 </div>
@@ -186,7 +186,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-alfinia.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -195,7 +195,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-pawnstar.html">
                 <div class="work-img">
                   <img src="assets/img/project-pawnstar.png" alt="" class="img-fluid">
                 </div>
@@ -210,7 +210,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pawnstar.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -219,7 +219,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-poc.html">
                 <div class="work-img">
                   <img src="assets/img/project-poc.png" alt="" class="img-fluid">
                 </div>
@@ -234,7 +234,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-poc.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -243,7 +243,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-subunet.html">
                 <div class="work-img">
                   <img src="assets/img/project-subunet.png" alt="" class="img-fluid">
                 </div>
@@ -258,7 +258,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-subunet.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -267,7 +267,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-anblic.html">
                 <div class="work-img">
                   <img src="assets/img/project-anblic.png" alt="" class="img-fluid">
                 </div>
@@ -282,7 +282,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-anblic.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -291,9 +291,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-cover.html">
                 <div class="work-img">
-                  <img src="assets/img/" alt="" class="img-fluid">
+                  <img src="assets/img/project-cover.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -306,7 +306,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-cover.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -315,9 +315,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-kikickisenva.html">
                 <div class="work-img">
-                  <img src="assets/img/" alt="" class="img-fluid">
+                  <img src="assets/img/project-kikickisenva.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -330,7 +330,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-kikickisenva.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -339,9 +339,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-space.html">
                 <div class="work-img">
-                  <img src="assets/img/" alt="" class="img-fluid">
+                  <img src="assets/img/project-space.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -354,7 +354,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-space.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -363,9 +363,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-mapz.html">
                 <div class="work-img">
-                  <img src="assets/img/" alt="" class="img-fluid">
+                  <img src="assets/img/project-mapz.jpeg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -378,7 +378,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-mapz.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -387,9 +387,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-affapy.html">
                 <div class="work-img">
-                  <img src="assets/img/" alt="" class="img-fluid">
+                  <img src="assets/img/project-affapy.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -402,7 +402,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-affapy.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -411,9 +411,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-focus.html">
                 <div class="work-img">
-                  <img src="assets/img/" alt="" class="img-fluid">
+                  <img src="assets/img/project-focus.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -426,7 +426,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-focus.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -435,9 +435,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-quarto.html">
                 <div class="work-img">
-                  <img src="assets/img/" alt="" class="img-fluid">
+                  <img src="assets/img/project-quarto.jpeg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -450,7 +450,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-quarto.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
