--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- =======================================================
   * Template Name: DevFolio
   * Updated: Jan 29 2024 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
+  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-pages/html-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
@@ -156,7 +156,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="work" class="portfolio-mf sect-pt4 route">
+    <section id="work" class="portfolio-pages/mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -171,7 +171,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="portfolio-alfinia.html">
+              <a href="portfolio-pages/alfinia.html">
                 <div class="work-img">
                   <img src="assets/img/project-alfinia.png" alt="" class="img-fluid">
                 </div>
@@ -186,7 +186,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-alfinia.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pages/alfinia.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -195,7 +195,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="portfolio-pawnstar.html">
+              <a href="portfolio-pages/pawnstar.html">
                 <div class="work-img">
                   <img src="assets/img/project-pawnstar.png" alt="" class="img-fluid">
                 </div>
@@ -210,7 +210,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-pawnstar.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pages/pawnstar.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -219,7 +219,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="portfolio-poc.html">
+              <a href="portfolio-pages/poc.html">
                 <div class="work-img">
                   <img src="assets/img/project-poc.png" alt="" class="img-fluid">
                 </div>
@@ -234,7 +234,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-poc.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pages/poc.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -243,7 +243,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="portfolio-subunet.html">
+              <a href="portfolio-pages/subunet.html">
                 <div class="work-img">
                   <img src="assets/img/project-subunet.png" alt="" class="img-fluid">
                 </div>
@@ -258,7 +258,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-subunet.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pages/subunet.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -267,7 +267,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="portfolio-anblic.html">
+              <a href="portfolio-pages/anblic.html">
                 <div class="work-img">
                   <img src="assets/img/project-anblic.png" alt="" class="img-fluid">
                 </div>
@@ -282,7 +282,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-anblic.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pages/anblic.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -291,7 +291,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="portfolio-cover.html">
+              <a href="portfolio-pages/cover.html">
                 <div class="work-img">
                   <img src="assets/img/project-cover.png" alt="" class="img-fluid">
                 </div>
@@ -306,7 +306,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-cover.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pages/cover.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -315,7 +315,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="portfolio-kikickisenva.html">
+              <a href="portfolio-pages/kikickisenva.html">
                 <div class="work-img">
                   <img src="assets/img/project-kikickisenva.png" alt="" class="img-fluid">
                 </div>
@@ -330,7 +330,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-kikickisenva.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pages/kikickisenva.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -339,7 +339,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="portfolio-space.html">
+              <a href="portfolio-pages/space.html">
                 <div class="work-img">
                   <img src="assets/img/project-space.jpg" alt="" class="img-fluid">
                 </div>
@@ -354,7 +354,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-space.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pages/space.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -363,7 +363,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="portfolio-mapz.html">
+              <a href="portfolio-pages/mapz.html">
                 <div class="work-img">
                   <img src="assets/img/project-mapz.jpeg" alt="" class="img-fluid">
                 </div>
@@ -378,7 +378,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-mapz.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pages/mapz.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -387,7 +387,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="portfolio-affapy.html">
+              <a href="portfolio-pages/affapy.html">
                 <div class="work-img">
                   <img src="assets/img/project-affapy.png" alt="" class="img-fluid">
                 </div>
@@ -402,7 +402,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-affapy.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pages/affapy.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -411,7 +411,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="portfolio-focus.html">
+              <a href="portfolio-pages/focus.html">
                 <div class="work-img">
                   <img src="assets/img/project-focus.png" alt="" class="img-fluid">
                 </div>
@@ -426,7 +426,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-focus.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pages/focus.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -435,7 +435,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="portfolio-quarto.html">
+              <a href="portfolio-pages/quarto.html">
                 <div class="work-img">
                   <img src="assets/img/project-quarto.jpeg" alt="" class="img-fluid">
                 </div>
@@ -450,7 +450,7 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="w-like">
-                      <a href="portfolio-quarto.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-pages/quarto.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
